# shopsystem-product

./: .env.example  .gitignore  01-principles.md  02-bounded-contexts-and-subdomains.md  03-lead-shop.md  04-bc-shop.md  05-inter-shop-protocol.md  06-work-tracking.md  CLAUDE.md  Dockerfile.bc-base-rebuild  Dockerfile.shopsystem-shell  INSTALL.md  README.md  artifact-lifecycle.md  bc-manifest.yaml  compose.yaml  consumer-wiring.md  current-state.md  pyproject.toml  work-summary.md
.beads/: config.yaml  issues.jsonl  metadata.json
.devcontainer/: devcontainer.json
.fabro-e2e-scratch/: clean3-scenario.txt  fabro-e2e.env  s5-retry.sh  workflow-forcefail.toml
.specstory/: .project.json
adr/: 001-framework-packaging.md  002-harness-bc-introduction.md  003-ecommerce-real-domain-instantiation.md  004-bc-launcher-as-new-bc.md  005-bc-manifest-in-lead-repo.md  006-messaging-name-registry-design.md  008-docs-bc-introduction.md  009-clarify-resolution-vehicle.md  010-clarify-resolution-work-done-scope.md  011-bead-message-field-mapping.md  011-outbox-atomicity-bd-first.md  012-bead-message-field-mapping.md  (+57 more)
tools/shopsystem-decisions/: .gitignore  README.md  pyproject.toml
tools/shopsystem-decisions/ci/: decisions-gate.sh
tools/shopsystem-decisions/schema/: decision.schema.yaml
tools/shopsystem-decisions/skill/consult-decision-index/: SKILL.md
tools/shopsystem-decisions/src/shopsystem_decisions/: __init__.py  cli.py  corpus.py  gate.py  generate.py  invhash.py  migrate.py  model.py  parser.py  schema.py
tools/shopsystem-decisions/tests/: conftest.py  test_cli_smoke.py  test_fc1_delta.py  test_fc2_prose.py  test_fc3_refs.py  test_fc4_supersession.py  test_generate.py  test_lint.py  test_modes.py  test_offline.py  test_parser_hash.py
(+1449 files in other folders)
